syntax = "proto3";

package clutch.config.module.chaos.experimentation.xds.v1;

option go_package = "github.com/lyft/clutch/backend/api/config/module/chaos/experimentation/xds/v1;xdsv1";

import "validate/validate.proto";

message ServerFaultsRTDSResourceGeneratorConfig {
  // A prefix to use for runtime variables if a fault type is injected on the ingress traffic by an upstream service.
  string ingress_fault_runtime_prefix = 2 [ (validate.rules).string = {min_bytes : 1} ];
  // A prefix to use for runtime variables if a fault type is injected on the egress traffic by a downstream service.
  string egress_fault_runtime_prefix = 3 [ (validate.rules).string = {min_bytes : 1} ];
}
